--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,13 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid text-center">
       <div class="carta">
-        <span class="simboloSuperior">♦</span>
-        <span class="numero">8</span>
-        <span class="simboloInferior">♦</span>
+        <div class="simboloSup">♦</div>
+        <div class="numero">8</div>
+        <div class="simboloInfe">♦</div>
       </div>
     </div>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
