--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,10 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <div class="carta">
-        <div class="simboloSup">♦</div>
-        <div class="numero">8</div>
-        <div class="simboloInfe">♦</div>
+      <div class="carta" id="carta>
+        <div class="simboloSup"></div>
+        <div class="numero"></div>
+        <div class="simboloInfe"></div>
       </div>
     </div>
     <script type="text/javascript" src="app.js"></script>
