--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <div class="carta" id="carta>
+      <div class="carta" id="carta">
         <div class="simboloSup"></div>
         <div class="numero"></div>
         <div class="simboloInfe"></div>
